[package]
name = "incredimo"
version = "0.1.14"
edition = "2021"
authors = ["incredimo <aghil@xo.rs>"]
description = "just another font for your terminal"
license = "MIT"
repository = "https://github.com/incredimo/incredifont"
homepage = "https://github.com/incredimo/incredifont"
documentation = "https://docs.rs/incredimo"
readme = "README.md"
keywords = ["banner", "terminal", "ascii", "art"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clipboard = "0.5.0"
# absolutely nothing!













